# aucavo

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: publish-crate.yml
.proteto/: README.md  project.toml
doc/: glossary.md
src/: as_slice.rs  bignum.rs  cycles.rs  gap.rs  inplace.rs  lib.rs  perm.rs  point.rs  rand.rs  specialize.rs
src/as_slice/: boxed_slice.rs  refs.rs  slice.rs  vec.rs
src/perm/: array_perm.rs  fmt.rs  iter.rs  ops.rs  parse.rs  raw.rs  small_perm.rs  vec_perm.rs
src/perm/raw/: unchecked_wrappers.rs
