[package]
name = "aucavo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", optional = true }
num-traits = { version = "0.2.15", optional = true }
smallvec = { version = "1.10.0", features = ["const_generics", "const_new", "union"] }

[features]
use-num-bigint = ["num-bigint", "num-traits"]
